--- a/securities-poc-gw.yml
+++ b/securities-poc-gw.yml
@@ -31,8 +31,8 @@ rabbitmq:
 thirdparty-api:
   alpaca-api:
     endPoint: https://paper-api.alpaca.markets
-    apiKeyId: ZZZZZZZZZZZZZZZZZZZ
-    secretKey: lvsfndasnvasnsasc
+    apiKeyId: ***ENCRYPT_ME***
+    secretKey: ***ENCRYPT_ME***
     username: STATIONMANAGEMENT_API_USR
   finnhubApi:
     endPoint: https://finnhub.io/api/v1
@@ -43,4 +43,3 @@ spring:
     username: root
     password: 12345
     url: jdbc:mysql://localhost:3306/sec-gateway?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-
