--- a/securities-poc-portfolio-service.yml
+++ b/securities-poc-portfolio-service.yml
@@ -30,7 +30,6 @@ rabbitmq:
 
 spring:
   datasource:
-    username: root
-    password: 12345
+    username: ENCRYPT_ME
+    password: ENCRYPT_ME
     url: jdbc:mysql://localhost:3306/sec-portfolio?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useConfigs=maxPerformance&useSSL=false&useLegacyDatetimeCode=false&serverTimezone=UTC
-
